changed questions' responsiveness

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,11 @@ a:hover {
     font-size: 2.8vh;
 }
 
+.trivia-container {
+
+    padding-bottom: 3vh;
+}
+
 button {
     font-family: 'Open Sans', sans-serif;
     margin-top: 3vh;
@@ -221,7 +226,7 @@ main {
     align-items: center;
     background-image: linear-gradient( 109.6deg,  rgba(48,207,208,1) 11.2%, rgba(51,8,103,1) 92.5% );
     width: 100%;
-    height: 86vh;
+    height: 120vh;
 }
 
 footer {
@@ -302,4 +307,8 @@ footer {
     .about-container {
         height: 65vh;
     }
+
+    /* .footer {
+        padding-bottom: 20px;
+    } */
 }
